--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^8.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.3",
@@ -68,6 +69,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
+    "tailwindcss": "^3.4.4",
     "tracked-built-ins": "^3.3.0",
     "webpack": "^5.91.0"
   },
