feat: ch6 - components, event listeners

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@ember/optional-features": "^2.1.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^3.3.0",
+    "@fortawesome/ember-fontawesome": "^2.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
@@ -53,6 +56,7 @@
     "ember-page-title": "^8.2.3",
     "ember-qunit": "^8.0.2",
     "ember-resolver": "^11.0.1",
+    "ember-set-helper": "^3.0.1",
     "ember-source": "~5.8.0",
     "ember-template-lint": "^5.13.0",
     "ember-welcome-page": "^7.0.2",
